@@ -19,6 +19,7 @@ detailed list of changes, please see ChangeLog.
  * crash-digger: Intercept httplib2.HttpLib2Error on download.
  * apport-gtk: Update legacy icon names to modern GTK ones, to fix icons under
    GNOME. Thanks Scott Sanbar. (LP: #1422176)
+ * Move backend_apt_dpkg testsuite to use Ubuntu 14.04 LTS.
 
 2.16.1 (2015-02-10)
 -------------------
